Criando a API do ChatGPT